@@ -1,5 +1,11 @@
 2013-02-26  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>
 
+	* Makefile.in (libdfp_c_tests): Rename test-round to test-fenv.
+	* tests/test-round.c: Move from ...
+	* tests/test-fenv.c: ... to here.
+
+2013-02-26  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>
+
 	* Makefile.in (libdfp_c_tests): Remove test-GCC-PR52140, test-negate,
 	test-param, and test-stdlib.
 	* tests/test-GCC-PR52140.c: Remove.
